src/objects/SyncContactInfo__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>ファーストネーム（名）</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>不明</fullName>
                    <default>true</default>
                    <label>不明</label>
                </value>
                <value>
                    <fullName>男性</fullName>
                </value>
                <value>
                    <fullName>女性</fullName>
                </value>
                <value>
                    <fullName>適用不能</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>ラストネーム（姓）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailAddress__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>メールアドレス</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>ミドルネーム</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationalities__c</fullName>
        <label>国籍</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncKey__c</fullName>
        <externalId>true</externalId>
        <label>おもてなし連携提示ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>おもてなしお客様</label>
    <nameField>
        <label>おもてなしお客様名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>